--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
                 <div class="image-container">
                     <img src="assets/profile.jpg">
                 </div>
-                <p>Here's some technologies I've experienced with:</p>
+                <p>Here's some technologies I have experience with:</p>
                 <ul class="tech-list"><li>C#</li><li>.NET</li><li>Python</li><li>Flask</li><li>Git</li><li>C++</li><li>C</li><li>Swift</li><li>Firebase</li><li>SQL</li><li>HTML</li><li>CSS</li><li>JS</li><li>UNIX</li></ul>
             </div>
             <div class="text">
