added transition effect when switching tabs

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src=script.js></script>
     <title>Peyton's About Me</title>
     <link rel="stylesheet" type="text/css" href="css/styleaboutme.css">
 </head>
