--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src=script.js></script>
     <title>Peyton's Projects</title>
     <link rel="stylesheet" type="text/css" href="css/styleprojects.css">
 </head>
