--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src=script.js></script>
     <title>Peyton's Website</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
     <nav>
         <div class="left-nav-bar">
             <a href="">Home</a>
