remove index.html from url

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <div class="left-nav-bar">
-            <a href="">Home</a>
+            <a href="/">Home</a>
         </div>
         <div class="right-nav-bar">
             <a href="aboutme.html">About Me</a>
