--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <div class="left-nav-bar">
-            <a href="index.html">Home</a>
+            <a href="/">Home</a>
         </div>
         <div class="right-nav-bar">
             <a href="aboutme.html">About Me</a>
