--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src=script.js></script>
+    <script type="text/javascript" src=static/js/script.js></script>
     <title>Peyton's Website</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
         <div class="right-nav-bar">
             <a href="aboutme.html">About Me</a>
             <a href="projects.html">Projects</a>
-            <a onclick="window.open('assets/Peyton_Smith_Resume.pdf')">Resume</a>
+            <a onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
     </nav>
     <div class="home">
@@ -35,7 +35,7 @@
                 </a>
             </div>
             <div class="right-side">
-                <img src="assets/profile2.jpg">
+                <img src="static/assets/profile2.jpg">
             </div>
         </div>
     </div>
