--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src=script.js></script>
+    <script type="text/javascript" src=static/js/script.js></script>
     <title>Peyton's Projects</title>
-    <link rel="stylesheet" type="text/css" href="css/styleprojects.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styleprojects.css">
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
         <div class="right-nav-bar">
             <a href="aboutme.html">About Me</a>
             <a class="projects-button" href="projects.html">Projects</a>
-            <a  onclick="window.open('assets/Peyton_Smith_Resume.pdf')">Resume</a>
+            <a  onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
     </nav>
     <header>
@@ -25,10 +25,10 @@
     <div class="projects">
         <div class="mouthpiece">
             <div class="project-image">
-                <img src="assets/mp1.png">
+                <img src="static/assets/mp1.png">
             </div>
             <div class="project-image">
-                <img src="assets/mp2.png">
+                <img src="static/assets/mp2.png">
             </div>
             <div class="project-contents">
                 <p>1.</p>
@@ -59,12 +59,12 @@
                 </a>
             </div>
             <div class="project-image">
-                <img src="assets/zillow.png">
+                <img src="static/assets/zillow.png">
             </div>
         </div>
         <div class="ecommerce">
             <div style="flex: 1.5;" class="project-image">
-                <img style="height:350px; margin-top: 50px;" src="assets/ecommerce.png">
+                <img style="height:350px; margin-top: 50px;" src="static/assets/ecommerce.png">
             </div>
             <div style="max-width: 40%" class="project-contents">
                 <p>3.</p>
@@ -77,6 +77,9 @@
                 <ul class="project-tech-list"><li>C#</li><li>.NET</li><li>XAML</li></ul>
                 <a href="https://github.com/mills-fsu-csharp-summer2022/eCommerce-Assignment3-PeytonSmith-Su2/tree/eCommerce-Assignment5-PeytonSmith-Su22" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                </a>
+                <a href="https://www.youtube.com/watch?v=XN52Kqy6KJs&list=PLdUF-6bQJVSLGV6VD68C6t-vT5NWsDDRA&ab_channel=PeytonSmith" target="_blank" rel="noopener noreferrer" class="youtubelogo">
+                    <img style="height: 24px; padding-left: 10px;"src="static/assets/youtube.png">
                 </a>
             </div>
         </div>
@@ -92,7 +95,7 @@
                 <ul class="project-tech-list left" style="flex-wrap: wrap"><li>SQL</li><li>mySQL</li></ul>
             </div>
             <div style="flex: 1.2;" class="project-image">
-                <img src="assets/sql.png">
+                <img src="static/assets/sql.png">
             </div>
         </div>
     </div>
