--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src=script.js></script>
+    <script type="text/javascript" src=static/js/script.js></script>
     <title>Peyton's About Me</title>
-    <link rel="stylesheet" type="text/css" href="css/styleaboutme.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styleaboutme.css">
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
         <div class="right-nav-bar">
             <a class="about-me-button" href="aboutme.html">About Me</a>
             <a href="projects.html">Projects</a>
-            <a onclick="window.open('assets/Peyton_Smith_Resume.pdf')">Resume</a>
+            <a onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
     </nav>
     <div class="aboutme">
@@ -26,7 +26,7 @@
         <div class="about-me-contents">
             <div class="left-side">
                 <div class="image-container">
-                    <img src="assets/profile.jpg">
+                    <img src="static/assets/profile.jpg">
                 </div>
                 <p>Here's some technologies I have experience with:</p>
                 <ul class="tech-list"><li>C#</li><li>.NET</li><li>Python</li><li>Flask</li><li>Git</li><li>C++</li><li>C</li><li>Swift</li><li>Firebase</li><li>SQL</li><li>HTML</li><li>CSS</li><li>JS</li><li>UNIX</li></ul>
