update info to graduate of FSU

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="left-side">
                 <h2>Hey! I'm</h2>
                 <h1>Peyton Smith</h1>
-                <p>I'm a Computer Engineering student at FSU with a passion for software development. My current area of interest lies in full-stack app development as a whole, and I'm committed to continuously learning and mastering new technologies along the way!</p>
+                <p>I'm an FSU Computer Engineering graduate with a passion for software development. My current area of interest lies in full-stack app development as a whole, and I'm committed to continuously learning and mastering new technologies along the way!</p>
                 <a href="https://www.linkedin.com/in/19peytonsmith/" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><title>LinkedIn</title><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                 </a>
