added google api to mouthpiece & qol changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,31 +8,31 @@
 <body>
     <nav>
         <div class="left-nav-bar">
-            <a href="/">Home</a>
+            <a style="padding-left: 0px" href="/">Home</a>
         </div>
         <div class="right-nav-bar">
             <a class="about-me-button" href="aboutme.html">About Me</a>
             <a href="projects.html">Projects</a>
-            <a onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
+            <a style="padding-right: 0px" onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
     </nav>
+    <header>
+        <h1>
+        <span class="header-text">Who am I?</span>
+        <span class="green-line"></span>
+        </h1>
+    </header>
     <div class="aboutme">
-        <header>
-            <h1>
-            <span class="header-text">Who am I?</span>
-            <span class="green-line"></span>
-            </h1>
-        </header>
         <div class="about-me-contents">
             <div class="left-side">
                 <div class="image-container">
                     <img src="static/assets/profile.jpg">
                 </div>
                 <p>Here's some technologies I have experience with:</p>
-                <ul class="tech-list"><li>C#</li><li>.NET</li><li>Python</li><li>Flask</li><li>Git</li><li>C++</li><li>C</li><li>Swift</li><li>Firebase</li><li>SQL</li><li>HTML</li><li>CSS</li><li>JS</li><li>UNIX</li></ul>
+                <ul class="tech-list"><li>C#</li><li>.NET</li><li>Python</li><li>Flask</li><li>Git</li><li>C++</li><li>C</li><li>Swift</li><li>Firebase</li><li>SQL</li><li>HTML</li><li>CSS</li><li>JS</li><li>Unix</li></ul>
             </div>
             <div class="text">
-                <p>Hi! My name is Peyton, I'm a 21 year-old aspiring software engineer looking to get my foot in the door with work experience. I recently graduated with high honors from Florida State University in May 2023, earning my Bachelor's degree in Computer Engineering. At a young age, I've had a passion for math and science which then led me to explore the world of computers and technology as a whole. During high school, I had a strong passion for math, tutoring fellow classmates and assistant teaching our high school algebra class.</p><p style="margin-top: 10px;">As I entered college, I was new to coding but quickly grew to enjoy it. Starting with C++, I then delved into engineering-focused languages such as MATLAB and C, before progressing to higher-level languages like C# and self-learning web development using HTML, CSS, and JS. My personal projects have also allowed me to expand my skillset to include Python, and currently, I am learning iOS app development with Swift for our Senior Design project! I'm happy with my journey so far, and I'm excited to see what the future holds for the years to come.</p>
+                <p>Hi! My name is Peyton, I'm a 21 year-old aspiring software engineer looking to get my foot in the door with work experience. I recently graduated with high honors from Florida State University in May 2023, earning my Bachelor's degree in Computer Engineering. At a young age, I've had a passion for math and science which then led me to explore the world of computers and technology as a whole. During high school, I had a strong passion for math, tutoring fellow classmates and assistant teaching our high school algebra class.</p><p style="margin-top: 10px;">As I entered college, I was new to coding but quickly grew to enjoy it. Starting with C++, I then delved into engineering-focused languages such as MATLAB and C, before progressing to higher-level languages for full-stack app development like C# and self-learning web development using HTML, CSS, and JS. My personal projects have also allowed me to expand my skillset to include Python, SQL, and most recently Swift for iOS full-stack app development! I'm happy with my journey so far, and I'm excited to see what the future holds for the years to come.</p>
             </div>
         </div>
     </div>
