--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <nav>
         <div class="left-nav-bar">
-            <a href="/">Home</a>
+            <a style="padding-left: 0px" href="/">Home</a>
         </div>
         <div class="right-nav-bar">
             <a href="aboutme.html">About Me</a>
             <a href="projects.html">Projects</a>
-            <a onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
+            <a style="padding-right: 0px" onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
     </nav>
     <div class="home">
