--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
         <div class="about-me-contents">
             <div class="left-side">
                 <div class="image-container">
-                    <img src="static/assets/profile.jpg">
+                    <img src="static/assets/profile3.jpg">
                 </div>
                 <p>Here's some technologies I have experience with:</p>
                 <ul class="tech-list"><li>C#</li><li>.NET</li><li>Python</li><li>Flask</li><li>Git</li><li>C++</li><li>C</li><li>Swift</li><li>Firebase</li><li>SQL</li><li>HTML</li><li>CSS</li><li>JS</li><li>Unix</li></ul>
