responsive-ness update

--- a/projects.html
+++ b/projects.html
@@ -24,16 +24,19 @@
     </header>
     <div class="projects">
         <div class="mouthpiece">
-            <div class="project-image" style="max-width: 30%">
-                <img src="static/assets/mp1.png">
-            </div>
-            <div class="project-image" style="max-width: 30%">
-                <img src="static/assets/mp2.png">
+            
+            <div class="project-images">
+                <div class="project-image" style="max-width: 30%">
+                    <img src="static/assets/mp1.png">
+                </div>
+                <div class="project-image" style="max-width: 30%; margin-top: 20px;">
+                    <img src="static/assets/mp2.png">
+                </div>
             </div>
             <div style="max-width: 50%" class="project-contents">
                 <p>1.</p>
                 <div class="project-title">
-                    <h2 style="font-size:48px">Mouthpiece</h2>
+                    <h2 style="font-size:2.5vw">Mouthpiece</h2>
                 </div>
                 <div class="project-description">
                     <p>A social media app whose motivation is seamlessly sharing posts, pictures, and videos for a community of those interested in sports. The app has basic social media functionality with some geolocation features.</p>
@@ -48,7 +51,7 @@
             <div style="padding-right: 50px;" class="project-contents">
                 <p>2.</p>
                 <div class="project-title">
-                    <h2 style="font-size:32px">Zillow Guessing Game</h2>
+                    <h2 style="font-size:1.6vw">Zillow Guessing Game</h2>
                 </div>
                 <div class="project-description">
                     <p>Ongoing personal Python web-app project where it fetches a random Zillow listing, displays the info alongside a gallery of all of the pictures and has the user guess the price. </p>
@@ -66,10 +69,10 @@
             <div style="flex: 1.5;" class="project-image">
                 <img style="height:350px; margin-top: 50px;" src="static/assets/ecommerce.png">
             </div>
-            <div style="max-width: 40%" class="project-contents">
+            <div style="max-width: 40%; padding-left: 20px;" class="project-contents">
                 <p>3.</p>
                 <div class="project-title">
-                    <h2 style="font-size:36px">C# eCommerce app</h2>
+                    <h2 style="font-size:1.8vw">C# eCommerce app</h2>
                 </div>
                 <div class="project-description">
                     <p>Starting from a basic console application, I've transformed this project into a 2-sided admin/customer full-stack desktop application with a file system-based database and a working web API to query data used to perform CRUD operations on products within the database. </p>
@@ -87,7 +90,7 @@
             <div style="padding-right: 50px;" style="max-width: 40%" class="project-contents">
                 <p>4.</p>
                 <div class="project-title">
-                    <h2 style="font-size:36px">SQL Multiplayer Game Database</h2>
+                    <h2 style="font-size:2vw">SQL Multiplayer Game Database</h2>
                 </div>
                 <div class="project-description">
                     <p>Leveraged SQL to plot entities associated to the game including user information, friend data, map/score statistics, and tournament functionality. I also optimized and developed SQL scripts and queries to yield data from various levels of the database architecture.</p>
