update on mobile responsive-ness

--- a/projects.html
+++ b/projects.html
@@ -27,15 +27,15 @@
             <div class="mouthpiece">
         
                 <div class="project-images">
-                    <div class="project-image" id="first-image" style="max-width: 30%">
+                    <div class="project-image mouthpiece-image" id="first-image" style="max-width: 30%">
                         <img src="static/assets/mp1.png">
                     </div>
-                    <div class="project-image" id="second-image" style="max-width: 30%;">
+                    <div class="project-image mouthpiece-image" id="second-image" style="max-width: 30%;">
                         <img src="static/assets/mp2.png">
                     </div>
                 </div>
                 <div style="max-width: 50%" class="project-contents">
-                    <p>1.</p>
+                    <p class="number">1.</p>
                     <div class="project-title">
                         <h2 style="font-size:2.5vw">Mouthpiece</h2>
                     </div>
@@ -50,7 +50,7 @@
             </div>
             <div class="zillow">
                 <div style="padding-right: 50px;" class="project-contents">
-                    <p>2.</p>
+                    <p class="number">2.</p>
                     <div class="project-title">
                         <h2 style="font-size:1.6vw">Zillow Guessing Game</h2>
                     </div>
@@ -63,15 +63,15 @@
                     </a>
                 </div>
                 <div class="project-image">
-                    <img src="static/assets/zillow.png">
+                    <img class="border" src="static/assets/zillow.png">
                 </div>
             </div>
             <div class="ecommerce">
                 <div style="flex: 1.5;" class="project-image">
-                    <img style="height:350px; margin-top: 50px;" src="static/assets/ecommerce.png">
+                    <img class="border" style="height:350px; margin-top: 50px;" src="static/assets/ecommerce.png">
                 </div>
                 <div style="max-width: 40%; padding-left: 20px;" class="project-contents">
-                    <p>3.</p>
+                    <p class="number">3.</p>
                     <div class="project-title">
                         <h2 style="font-size:1.8vw">C# eCommerce app</h2>
                     </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="sql">
                 <div style="padding-right: 50px;" style="max-width: 40%" class="project-contents">
-                    <p>4.</p>
+                    <p class="number">4.</p>
                     <div class="project-title">
                         <h2 style="font-size:2vw">SQL Multiplayer Game Database</h2>
                     </div>
@@ -99,7 +99,7 @@
                     <ul class="project-tech-list left" style="flex-wrap: wrap"><li>SQL</li><li>mySQL</li></ul>
                 </div>
                 <div style="flex: 1.2;" class="project-image">
-                    <img src="static/assets/sql.png">
+                    <img class="border" src="static/assets/sql.png">
                 </div>
             </div>
         </div>
