--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,8 @@
             <a style="padding-left: 0px" href="/">Home</a>
         </div>
         <div class="right-nav-bar">
-            <a class="about-me-button" href="aboutme.html">About Me</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="experience.html">Experience</a>
             <a class="projects-button" href="projects.html">Projects</a>
             <a style="padding-right: 0px" onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
