--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,7 @@
         </div>
         <div class="right-nav-bar">
             <a class="about-me-button" href="aboutme.html">About Me</a>
+            <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a style="padding-right: 0px" onclick="window.open('static/assets/Peyton_Smith_Resume.pdf')">Resume</a>
         </div>
