--- a/experience.html
+++ b/experience.html
@@ -31,7 +31,7 @@
                         <img src="static/assets/showcase.png">
                     </div>
                     <p>Technologies I have been experiencing here:</p>
-                    <ul class="tech-list"><li>Ruby on Rails</li><li>Docker</li><li>Github Actions</li><li>Rspec</li><li>Cypress</li><li>RESTful APIs</li><li>MinIO</li><li>Selenium</li><li>Kanban</li><li>Git</li><li>Bash</li><li>JavaScript</li><li>HTML</li><li>SCSS</li><li>Bootstrap</li></ul>
+                    <ul class="tech-list"><li>Ruby on Rails</li><li>Docker</li><li>Github Actions</li><li>Rspec</li><li>Cypress</li><li>Redis</li><li>RESTful APIs</li><li>MinIO</li><li>RubyGem</li><li>Kanban</li><li>Git</li><li>Bootstrap</li><li>Bash</li><li>JavaScript</li><li>HTML</li><li>SCSS</li></ul>
                 </div>
                 <div class="right-side">
                     <h3>Software Engineering Intern @</h3>
@@ -49,6 +49,9 @@
                         </li>
                         <li>
                             Employed several GHA workflows that automate the process of the build & release of the product.
+                        </li>
+                        <li>
+                            Engineered a comprehensive RubyGem API wrapper with over 30 easily interfaceable methods and classes for an external service used within the app, Tazworks API, made to screen tenants and property partners.
                         </li>
                         <li>
                             Seamlessly integrated unit tests using RSpec for the backend & Cypress for the front-end to improve operational efficiency by over 50%
